# molfun

./: .dockerignore  .env.example  .gitignore  404.html  CLAUDE.md  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  setup.py  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
METHODS/: index.html
advanced/: index.html
advanced/distributed/: index.html
advanced/export/: index.html
advanced/hub/: index.html
advanced/kernels/: index.html
advanced/pipelines/: index.html
agents/: index.html
architecture/: index.html
architecture/data-pipeline/: index.html
architecture/module-system/: index.html
architecture/overview/: index.html
architecture/patterns/: index.html
architecture/training-framework/: index.html
assets/stylesheets/: extra.css
configs/: finetune_kinases.yaml
datasets/: index.html
docs/: METHODS.md  agents.md  datasets.md  index.md  modules.md
docs/advanced/: distributed.md  export.md  hub.md  index.md  kernels.md  pipelines.md
docs/architecture/: data-pipeline.md  index.md  module-system.md  overview.md  patterns.md  training-framework.md
docs/extending/: attention.md  backends.md  blocks.md  embedders.md  index.md  losses.md  strategies.md  structure-modules.md  trackers.md
docs/getting-started/: first-finetuning.md  first-prediction.md  index.md  installation.md  quickstart.md
docs/openfold/: run.md  theory.md
docs/reference/: cli.md  export.md  index.md  losses.md  tracking.md
docs/theory/: fine-tuning.md  index.md  protein-structure-prediction.md
docs/tutorials/: binding-affinity.md  custom-architectures.md  experiment-tracking.md  index.md  kinase-refinement.md  lora-small-datasets.md  stability-prediction.md  yaml-pipelines.md
examples/: README.md  agent_architecture_search.py  benchmark_models.py  custom_architecture.py  finetune_affinity.py  parse_and_prepare.py  streaming_cloud.py  tracked_experiment.py
extending/: index.html
extending/attention/: index.html
extending/backends/: index.html
extending/blocks/: index.html
extending/embedders/: index.html
extending/losses/: index.html
extending/strategies/: index.html
extending/structure-modules/: index.html
extending/trackers/: index.html
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
getting-started/: index.html
getting-started/installation/: index.html
modules/: index.html
molfun/: __init__.py  constants.py  predict.py
recipes/: affinity_rf.yaml  family_classifier_svm.yaml  gpcr_quick.yaml  kinase_finetune.yaml  stability_head.yaml
reference/: index.html
scripts/: fine_tune.py  finetune_kinases.py  predict_from_trained.py  smoke_test.py
search/: search_index.json
tests/: README.md  __init__.py  conftest.py  test_bio_language_model.py  test_contact_map_performance.py  test_data_pipeline.py  test_esm_backend.py  test_esm_optimizer.py  test_integration.py  test_openfold_wrapper.py  test_predict.py  test_rmsd_performance.py
theory/: index.html
tutorials/: index.html
(+314 files in other folders)
