[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top (lazy imports)
    "B008",   # do not perform function calls in argument defaults
    "B023",   # function variable not used in loop body
    "B904",   # raise from within except
    "B905",   # zip without strict
    "SIM108", # ternary operator
    "SIM102", # collapsible if
    "UP007",  # use X | Y for union types (keep Optional for 3.10 compat)
    "UP045",  # use X | None (keep Optional for 3.10 compat)
    "F841",   # local variable assigned but never used (false positives in try/except)
]

[tool.ruff.lint.isort]
known-first-party = ["molfun"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "cuda: marks tests that require CUDA",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["molfun"]
omit = ["molfun/kernels/*", "tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
